# blkchn

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  client.cpp  server.cpp
.github/workflows/: build.yml
cmake/: CompileOptions.cmake
src/: CMakeLists.txt
src/blkchn/: Block.hpp  Blockchain.hpp  CMakeLists.txt  Node.hpp  Utils.hpp  main.cpp
